fix z-index of menu between breakpoint 3 - 4

--- a/src/Components/Menu/menu.scss
+++ b/src/Components/Menu/menu.scss
@@ -194,7 +194,7 @@ nav li {
         font-size: $h3-fontsize;
         font-weight: bold;
         box-shadow: $box-shadow; 
-        z-index: 1;
+        z-index: 99999;
     }
 
     #nav-dark {
